# c_extended_std

./: .gitignore  CMakeLists.txt  test.c  xarray.c  xarray.h  xhashmap.c
cmake/: xstdlibConfig.cmake.in
include/: xarray.h  xhashmap.h  xhashset.h  xio_utils.h  xlinked_list.h  xmemctl.h  xstdlib.h  xstring.h
lib-src/: xarray.c  xhashmap.c  xhashset.c  xio_utils.c  xlinked_list.c  xmemctl.c  xstring.c
test/: test.c  test_utils.c  test_utils.h  xarray_test.c  xhashmap_test.c  xhashset_test.c  xlinked_list_test.c  xmemctl_test.c  xstring_test.c
